--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -9,6 +9,6 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
         <property name="java-output-path" value="/kft-activiti-demo/target/classes"/>
-        <property name="context-root" value="kft-activiti-demo"/>
+        <property name="context-root" value="pms"/>
   </wb-module>
 </project-modules>
